notary_deployment_automated/deployments/dev/front/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: front-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: front-notary
  sessionAffinity: None
