notary_deployment_automated/deployments/dev/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: dev2-notary.gcp.bluemint.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 8080
  tls:
  - hosts:
    - dev2-notary.gcp.bluemint.ai
    secretName: notary-front-secret
#
